# pokechamp

./: ARCHITECTURE.md  COMPETITION_SETUP.md  GEN1_AGENT_DOCUMENTATION.md  GEN1_QUICK_REFERENCE.md  GEN1_RBY_MECHANICS_RESEARCH.md  GITHUB_REPO_DESCRIPTION.txt  PORTFOLIO_README.md  PORTFOLIO_RESULTS.md  PORTFOLIO_TESTING.md  QUICKSTART.md  README.md  README_GEN1_AGENT.md  VERIFIED_TEST_RESULTS.md  ladder_gen1.py  pyproject.toml  run_portfolio_tests.sh  test_agent_portfolio.py  test_custom_teams.py
bots/: gen1_agent.py  starter_kit_bot.py
poke_env/player/: local_simulation.py  team_util.py
pokechamp/: llm_player.py  llm_vgc_player.py
scripts/battles/: local_1v1.py
scripts/evaluation/: evaluate_gen9ou.py
teams/: README.md  gen1ou_balanced.txt  gen1ou_offensive.txt  gen1ou_sleep_focus.txt
webapp/: README.md  app.py  battle_runner.py
webapp/static/css/: style.css
webapp/static/js/: battle.js  main.js
webapp/templates/: agents.html  base.html  battle.html  index.html  stats.html
